@@ -1,3 +1,10 @@
+2014-05-12  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/include/stdint.h (WCHAR_MIN): Copy definition from wchar.h.
+	(WCHAR_MAX): Ditto.
+	* libc/include/wchar.h (WCHAR_MIN): Add comment.
+	(WCHAR_MAX): Ditto.
+
 2014-05-09  Corinna Vinschen  <vinschen@redhat.com>
 
 	* libc/include/stdio.h (tempnam): Declare as __BSD_VISIBLE or
